--- a/css/html/definition-CF.html
+++ b/css/html/definition-CF.html
@@ -21,7 +21,7 @@
 	padding-top: 10px;
 	padding-right: 5px;
 	padding-left: 5px;
-	padding-bottom: 10px; /* 内边距，用于创建间距 */
+	padding-bottom: 10px;
 	height: auto;
 	border: 2px solid #375D80;
 	margin-left: 5px;
@@ -31,13 +31,13 @@
 }
 
 #menu_df a {
-	display: block; /* 将链接元素转换为块级元素，以占据整个宽度 */
+	display: block;
 	padding-top:5px;
 	padding-left: 5px;
-	padding-bottom: 5px; /* 链接内边距 */
-	font-size: 15px; /* 字体大小 */
-	text-decoration: none; /* 移除下划线 */
-	color: black; /* 链接文本颜色 */
+	padding-bottom: 5px;
+	font-size: 15px;
+	text-decoration: none;
+	color: black; 
 	font-family: Verdana, Arial, sans-serif;
 	line-height:inherit;
 	z-index: 100;
@@ -49,9 +49,8 @@
 <body>
 <p class="h1_df">CCycDB-Definition </p>
 <hr>
-<!--插入一个表格吧，介绍情况-->
 <!-- 左侧索引栏 -->
-<div id="menu_df"><a href="https://jiayin-zhou.github.io/"><strong>HOME</strong></a> <a href="#top" style="color: white;background-color:#3B7197">Carbon Release</a> <a href="#CO"><strong>CO</strong></a> <a href="#CO-1" style="font-size: 14px;padding-left: 15px;">Acetyl-CoA &lt;=&gt; CO</a> <a href="#CO-CO2" style="font-size: 14px;padding-left: 15px;">CO &lt;=&gt; CO2</a> 
+<div id="menu_df"><a href="https://ccycdb.github.io/"><strong>HOME</strong></a> <a href="#top" style="color: white;background-color:#3B7197">Carbon Release</a> <a href="#CO"><strong>CO</strong></a> <a href="#CO-1" style="font-size: 14px;padding-left: 15px;">Acetyl-CoA &lt;=&gt; CO</a> <a href="#CO-CO2" style="font-size: 14px;padding-left: 15px;">CO &lt;=&gt; CO2</a> 
   <a href="#CO2"><strong>CO<sub>2</sub></strong></a>
 	<a href="#CBB" style="font-size: 14px;padding-left: 15px;">CBB Cycle</a> 
 	<a href="#rTCA" style="font-size: 14px;padding-left: 15px;">Reductive tricarboxylic acid</a> 
@@ -67,7 +66,6 @@
 
 <!-- 右侧方框 -->
 <div class="box_df">
-<!-- 第一个方框 -->
  <div >
 	<h3>Note:</h3>
 	<p style="margin-top: 0px; margin-bottom: 2px; margin-left: 40px;"><strong>From left to right:</strong></p>
@@ -145,23 +143,20 @@
 <li class ="level3_df optionbox">Photosystem II</li>
 <p class="gene_d4"><i>psbA</i>;&nbsp;Photosystem II protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02703">K02703(psbA):photosystem II P680 reaction center D1 protein;</a><a class="linkbrenda" href= "https://www.brenda-enzymes.org/enzyme.php?ecno=1.10.3.9">1.10.3.9; </a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/28IP8">28IP8/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2DBBD">2DBBD; </a></p><p class="gene_d4"><i>psbB</i>;&nbsp;Photosystem II CP47 reaction center protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02704">K02704(psbB):photosystem II CP47 chlorophyll apoprotein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2DB90">2DB90/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/28JG1">28JG1/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2DU9A">2DU9A; </a></p><p class="gene_d4"><i>psbC</i>;&nbsp;Photosystem II CP43 reaction center protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02705">K02705(psbC):photosystem II CP43 chlorophyll apoprotein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2DB98">2DB98/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/28ISP">28ISP; </a></p><p class="gene_d4"><i>psbD</i>;&nbsp;Photosystem II D2 protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02706">K02706(psbD):photosystem II P680 reaction center D2 protein;</a><a class="linkbrenda" href= "https://www.brenda-enzymes.org/enzyme.php?ecno=1.10.3.9">1.10.3.9; </a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2CNIT">2CNIT/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2DBDB">2DBDB; </a></p><p class="gene_d4"><i>psbE</i>;&nbsp;Cytochrome b559;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02707">K02707(psbE):photosystem II cytochrome b559 subunit alpha;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2CAD7">2CAD7/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2C2YG">2C2YG/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2CHYC">2CHYC; </a></p><p class="gene_d4"><i>psbF</i>;&nbsp;Cytochrome b559;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02708">K02708(psbF):photosystem II cytochrome b559 subunit beta;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2E87T">2E87T; </a></p><p class="gene_d4"><i>psbH</i>;&nbsp;Photosystem II reaction center protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02709">K02709(psbH):photosystem II PsbH protein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2E1MV">2E1MV/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2E88X">2E88X; </a></p><p class="gene_d4"><i>psbI</i>;&nbsp;Photosystem II reaction center protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02710">K02710(psbI):photosystem II PsbI protein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2EIT8">2EIT8/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2D0NY">2D0NY; </a></p><p class="gene_d4"><i>psbJ</i>;&nbsp;Photosystem II reaction center protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02711">K02711(psbJ):photosystem II PsbJ protein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2EGJI">2EGJI/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2C8JW">2C8JW/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2A478">2A478/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2A476">2A476; </a></p><p class="gene_d4"><i>psbK</i>;&nbsp;Photosystem II reaction center protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02712">K02712(psbK):photosystem II PsbK protein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2E7A8">2E7A8/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2E3TA">2E3TA; </a></p><p class="gene_d4"><i>psbL</i>;&nbsp;Photosystem II reaction center protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02713">K02713(psbL):photosystem II PsbL protein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2EGUI">2EGUI; </a></p><p class="gene_d4"><i>psbM</i>;&nbsp;Photosystem II reaction center protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02714">K02714(psbM):photosystem II PsbM protein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2D08W">2D08W/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2EFX3">2EFX3/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/29YYX">29YYX; </a></p><p class="gene_d4"><i>psbO</i>;&nbsp;Photosystem II manganese-stabilizing polypeptide;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02716">K02716(psbO):photosystem II oxygen-evolving enhancer protein 1;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/28JI2">28JI2; </a></p><p class="gene_d4"><i>psbP</i>;&nbsp;Photosystem II oxygen-evolving complex;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02717">K02717(psbP):photosystem II oxygen-evolving enhancer protein 2;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2DC0X">2DC0X; </a></p><p class="gene_d4"><i>psbT</i>;&nbsp;Photosystem II reaction center protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02718">K02718(psbT):photosystem II PsbT protein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2BA6A">2BA6A/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2E5Y2">2E5Y2/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2B1RC">2B1RC/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/29AS5">29AS5/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/29VZP">29VZP/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2EGXI">2EGXI; </a></p><p class="gene_d4"><i>psbU</i>;&nbsp;Photosystem II 12 kDa extrinsic protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02719">K02719(psbU):photosystem II PsbU protein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG1555">COG1555; </a></p><p class="gene_d4"><i>psbV</i>;&nbsp;Cytochrome c-550;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02720">K02720(psbV):photosystem II cytochrome c550;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG2010">COG2010/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2CXNY">2CXNY; </a></p><p class="gene_d4"><i>psbW</i>;&nbsp;Photosystem II reaction center W protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02721">K02721(psbW):photosystem II PsbW protein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2AR4E">2AR4E; </a></p><p class="gene_d4"><i>psbX</i>;&nbsp;Photosystem II reaction center X protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02722">K02722(psbX):photosystem II PsbX protein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2B84F">2B84F/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2EGTG">2EGTG/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2B8J6">2B8J6/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2BJUM">2BJUM/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2B9M9">2B9M9; </a></p><p class="gene_d4"><i>psbY</i>;&nbsp;Photosystem II protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02723">K02723(psbY):photosystem II PsbY protein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2B99Y">2B99Y/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2DK2F">2DK2F/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2DDSC">2DDSC/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2AEJ9">2AEJ9/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2AB3N">2AB3N/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2CCJX">2CCJX/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2BNP3">2BNP3/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2A87B">2A87B/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2EI42">2EI42; </a></p><p class="gene_d4"><i>psbZ</i>;&nbsp;Photosystem II reaction center protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02724">K02724(psbZ):photosystem II PsbZ protein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2C06H">2C06H/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/28WH7">28WH7; </a></p><p class="gene_d4"><i>psbR</i>;&nbsp;Photosystem II;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K03541">K03541(psbR):photosystem II 10kDa protein;</a></p><p class="gene_d4"><i>psbQ</i>;&nbsp;Photosystem II protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K08901">K08901(psbQ):photosystem II oxygen-evolving enhancer protein 3;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2D3MG">2D3MG; </a></p><p class="gene_d4"><i>psb27</i>;&nbsp;Photosystem II lipoprotein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K08902">K08902(psb27):photosystem II Psb27 protein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2AMT1">2AMT1; </a></p><p class="gene_d4"><i>psb28</i>;&nbsp;Photosystem II reaction center Psb28 protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K08903">K08903(psb28):photosystem II 13kDa protein;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG3310">COG3310/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2AR4E">2AR4E; </a></p>
 
-
-
-
-<!--test-->
   </ul>
 </div>
 	
 	
-</div> <!-- 右侧方框-->
+</div>
+	
 <script>
 function scrollToAnchor(anchorName) {
   var target = document.getElementsByName(anchorName)[0];
   if (target) {
-    var offset = target.getBoundingClientRect().top + window.scrollY - 200; // 修正偏移值为100px
+    var offset = target.getBoundingClientRect().top + window.scrollY - 200;
     window.scrollTo({
       top: offset,
-      behavior: 'smooth' // 可以添加平滑滚动效果
+      behavior: 'smooth'
     });
   }
 }
