--- a/css/html/definition-OB.html
+++ b/css/html/definition-OB.html
@@ -18,24 +18,24 @@
 	padding-top: 10px;
 	padding-right: 5px;
 	padding-left: 5px;
-	padding-bottom: 10px; /* 内边距，用于创建间距 */
+	padding-bottom: 10px;
 	height: 80%;
 	border: 2px solid #375D80;
 	margin-left: 5px;
 	margin-right: 2px;
-	overflow-y: auto; /* 显示垂直滚动条 */
+	overflow-y: auto;
 	overflow-x: auto;
 }
 
 #menu_df a {
-	display: block; /* 将链接元素转换为块级元素，以占据整个宽度 */
+	display: block;
 	padding-top: 5px;
 	padding-right: 0px;
 	padding-left: 0px;
-	padding-bottom: 5px; /* 链接内边距 */
-	font-size: 15px; /* 字体大小 */
-	text-decoration: none; /* 移除下划线 */
-	color: black; /* 链接文本颜色 */
+	padding-bottom: 5px;
+	font-size: 15px; 
+	text-decoration: none;
+	color: black; 
 	font-family: Verdana, Arial, sans-serif;
 	line-height:inherit;
 	z-index: 100;
@@ -51,10 +51,9 @@
 <body>
 <p class="h1_df">CCycDB-Definition </p>
 <hr>
-<!--插入一个表格吧，介绍情况-->
-<!-- 左侧索引 -->
+
 <div id="menu_df">
-	<a href="https://jiayin-zhou.github.io/"><strong>HOME</strong></a>
+	<a href="https://ccycdb.github.io/"><strong>HOME</strong></a>
 	<a href="#top" style="color: white;background-color:#3B7197">Organic Biosynthesis</a>
 	<a href="#Amino acid" style="font-weight:bold;">Amino acid</a>
 	  <a href="#Alcohol" style="font-size: 14px;text-align;padding-left: 15px;">Alcohol</a>
@@ -107,13 +106,11 @@
 
 <!-- 右侧 -->
 <div class="box_df">
-<!-- 1 -->
  <div >
 	<h3>Note:</h3>
 	<p style="margin-top: 0px; margin-bottom: 2px; margin-left: 40px;"><strong>From left to right:</strong></p>
 	<p style="margin-top: 0px;">Gene name; Annotation; KO Orthology;KO Symbol; Name in KEGG; EC-number in Brenda; Enzyme Classes in CAZY; GO Term </p>
  </div>
-<!---->
 <div class="level">
   <h3>Cateogory</h3>
   <ul class="ul_level">
@@ -3710,26 +3707,9 @@
 <p class="gene_d4"><i>yhdR</i>;&nbsp;Aspartate aminotransferase;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K11358">K11358(yhdR):aspartate aminotransferase;</a><a class="linkbrenda" href= "https://www.brenda-enzymes.org/enzyme.php?ecno=2.6.1.1">2.6.1.1; </a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG0436">COG0436; </a></p>
 <p class="gene_d4"><i>yxeI</i>;&nbsp;Penicillin V amidase;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K24041">K24041(yxeI):penicillin V amidase;</a><a class="linkbrenda" href= "https://www.brenda-enzymes.org/enzyme.php?ecno=3.5.1.11">3.5.1.11; </a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG3049">COG3049; </a></p>
 
-
-
-
-
-
-
-
-
-
-
-  
-
-  <!--内容完毕-->
   </ul>
 </div>
 	
-	
 </div>
-
-	
-
 </body>
 </html>
