--- a/css/html/definition-OT.html
+++ b/css/html/definition-OT.html
@@ -21,23 +21,23 @@
 	padding-top: 10px;
 	padding-right: 5px;
 	padding-left: 5px;
-	padding-bottom: 10px; /* 内边距，用于创建间距 */
+	padding-bottom: 10px;
 	height: auto;
 	border: 2px solid #375D80;
 	margin-left: 5px;
 	margin-right: 2px;
-	overflow-y: auto; /* 显示垂直滚动条 */
+	overflow-y: auto;
 	overflow-x: auto;
 }
 
 #menu_df a {
-	display: block; /* 将链接元素转换为块级元素，以占据整个宽度 */
+	display: block; 
 	padding-top:5px;
 	padding-left: 5px;
-	padding-bottom: 5px; /* 链接内边距 */
-	font-size: 15px; /* 字体大小 */
-	text-decoration: none; /* 移除下划线 */
-	color: black; /* 链接文本颜色 */
+	padding-bottom: 5px;
+	font-size: 15px;
+	text-decoration: none;
+	color: black;
 	font-family: Verdana, Arial, sans-serif;
 	line-height:inherit;
 	z-index: 100;
@@ -49,10 +49,9 @@
 <body>
 <p class="h1_df">CCycDB-Definition </p>
 <hr>
-<!--插入一个表格吧，介绍情况-->
 <!-- 左侧索引 -->
 <div id="menu_df">
-	<a href="https://jiayin-zhou.github.io/"><strong>HOME</strong></a>
+	<a href="https://ccycdb.github.io/"><strong>HOME</strong></a>
 	<a href="#top" style="color: white;background-color:#3B7197">Organic Transformation</a>
 	<a href="#Antibiotic"><b>Antibiotic</b></a>
 	<a href="#Amino acid"><b>Amino acid</b></a>
@@ -69,7 +68,6 @@
 	<a href="#Xenobiotics"><b>Xenobiotics</b></a>
 </div>
 
-<!-- 右侧 -->
 <div class="box_df">
 <!-- 1 -->
  <div >
@@ -82,7 +80,7 @@
   <a name="top"></a>
   <h3>Cateogory</h3>
   <ul class="ul_level">
-  <!--补充内容-->
+  <!--supplementary content-->
   <p class ="level1_df">Organic Transformation</p>
   <a name="Antibiotic"></a>
 <li class ="level2_df">Antibiotic</li>
