--- a/css/html/definition-Trans.html
+++ b/css/html/definition-Trans.html
@@ -20,23 +20,23 @@
 	padding-top: 10px;
 	padding-right: 5px;
 	padding-left: 5px;
-	padding-bottom: 10px; /* 内边距，用于创建间距 */
+	padding-bottom: 10px;
 	height: auto;
 	border: 2px solid #375D80;
 	margin-left: 5px;
 	margin-right: 2px;
-	overflow-y: auto; /* 显示垂直滚动条 */
+	overflow-y: auto; 
 	overflow-x: auto;
 }
 
 #menu_df a {
-	display: block; /* 将链接元素转换为块级元素，以占据整个宽度 */
+	display: block;
 	padding-top:15px;
 	padding-left: 5px;
-	padding-bottom: 10px; /* 链接内边距 */
-	font-size: 15px; /* 字体大小 */
-	text-decoration: none; /* 移除下划线 */
-	color: black; /* 链接文本颜色 */
+	padding-bottom: 10px; 
+	font-size: 15px; 
+	text-decoration: none; 
+	color: black; 
 	font-family: Verdana, Arial, sans-serif;
 	line-height:inherit;
 	z-index: 100;
@@ -48,10 +48,10 @@
 <body>
 <p class="h1_df">CCycDB-Definition </p>
 <hr>
-<!--插入一个表格吧，介绍情况-->
+
 <!-- 左侧索引 -->
 <div id="menu_df">
-	<a href="https://jiayin-zhou.github.io/"><strong>HOME</strong></a>
+	<a href="https://ccycdb.github.io/"><strong>HOME</strong></a>
 	<a href="#top" style="color: white;background-color:#3B7197">Transport</a>
 	<a href="#ABC">ABC transport</a>
 	<a href="#pho">Phosphotransferase</a>
@@ -89,9 +89,6 @@
 <a name="trans"></a>
 <li class="level2_df optionbox">Transport system</li>
 <p class="gene_d4"><i>glk</i>;&nbsp;Glucokinase;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K25026">K25026(glk):glucokinase;</a><a class="linkkegg" href="https://www.kegg.jp/entry/K00845">K00845(glk):glucokinase;</a><a class="linkbrenda" href= "https://www.brenda-enzymes.org/enzyme.php?ecno=2.7.1.2">2.7.1.2; </a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG1940">COG1940/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG0837">COG0837; </a></p><p class="gene_d4"><i>gamP</i>;&nbsp;PTS system glucosamine-specific EIICBA component;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02765">K02765(gamP):D-glucosamine PTS system EIICBA component;</a><a class="linkbrenda" href= "https://www.brenda-enzymes.org/enzyme.php?ecno=2.7.1.-">2.7.1.-; </a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG1263">COG1263; </a></p><p class="gene_d4"><i>crr</i>;&nbsp;PTS system glucose-specific EIIA component;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02777">K02777(crr):sugar PTS system EIIA component;</a><a class="linkbrenda" href= "https://www.brenda-enzymes.org/enzyme.php?ecno=2.7.1.-">2.7.1.-; </a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG2190">COG2190/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG1263">COG1263/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG1264">COG1264; </a></p><p class="gene_d4"><i>ptsG</i>;&nbsp;PTS system glucose-specific EIIBCA component|PTS system glucose-specific EIICB component|PTS system glucose-specific EIICBA component|;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K02779">K02779(ptsG):glucose PTS system EIICB or EIICBA component;</a><a class="linkkegg" href="https://www.kegg.jp/entry/K20118">K20118(ptsG, glcA, glcB):glucose PTS system EIICBA or EIICB component;</a><a class="linkbrenda" href= "https://www.brenda-enzymes.org/enzyme.php?ecno=2.7.1.199">2.7.1.199; </a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG1263">COG1263/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG1264">COG1264/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG2190">COG2190/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/2B5XK">2B5XK; </a></p><p class="gene_d4"><i>gbuA</i>;&nbsp;Glycine betaine/carnitine transport ATP-binding protein;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K12255">K12255(gbuA):guanidinobutyrase;</a><a class="linkbrenda" href= "https://www.brenda-enzymes.org/enzyme.php?ecno=3.5.3.7">3.5.3.7; </a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG4175">COG4175/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG0517">COG0517/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG2524">COG2524; </a></p><p class="gene_d4"><i>licA</i>;&nbsp;Beta-glucanase|Lichenan-specific phosphotransferase enzyme IIA component;&nbsp;<a class="linkkegg" href="https://www.kegg.jp/entry/K16119">K16119(licA):lichenysin synthetase A;</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG1447">COG1447/</a><a class="linkcog" href="http://eggnog6.embl.de/search/ogs/COG0510">COG0510; </a></p>
-
-  
-
   <!--内容完毕-->
   </ul>
 </div>
