--- a/index.html
+++ b/index.html
@@ -107,10 +107,9 @@ li {
 <h2 style="margin-left: 200px;margin-top: 0px;"> Welcom to the CCycDB ! </h2>
 
 <div id="box-container">
-    <div class="box1">
-        <p><strong>CCycDB</strong> is a knowledge-based functional gene database for accurate metagenomic profiling of carbon cycling microbial communities. CCycDB contains 4,572 genes with 10,548,067 targeted sequences involved in six modules covers 92 specific pathways. <br>
-        &nbsp;&nbsp;&nbsp;&nbsp;Please see "" for more details. Please let us know if some genes have escaped our attention, we will be happy to add them !</p>
-
+   <div class="box1">
+      <p><strong>CCycDB</strong> is a knowledge-based functional gene database for accurate metagenomic profiling of carbon cycling microbial communities. CCycDB contains 4,572 genes with 10,548,067 targeted sequences involved in six modules covers 92 specific pathways. A series of validations demonstrated that CCycDB outperformed large public orthology databases in terms of coverage, specificity, and accuracy, and can be used to accurately profile carbon cycling microbial communities in real metagenomic datasets. Please see "<strong>CCycDB: an integrative knowledgebase to fingerprint microbial carbon cycling processes</strong>" for more details.</p>
+      <p>Please let us know if any genes have escaped our attention or have been cataloged inaccurately, we will be happy to add or correct them !</p>
     </div>
     <img src="../image/FlowChart.jpg" alt="Workflow summary of CCycDB" style="max-width: 800px; max-height: 600px; margin-left: 120px;"> 
 <a name="Definition"></a>
@@ -130,8 +129,7 @@ li {
 <!-- ciation -->
 <div class="box2">
     <h2 id="model-configs" style="text-align: left;"><a name="citation"></a>Citation</h2>
-    <p> If you used the database in your research, please cite: "CCycDB: an integrative knowledgebase to fingerprint microbial carbon cycling processes"</p>
-    <a href="https:xxx">xxx</a> 
+       <p> If you feel this database and utilities are useful, please cite: "CCycDB: an integrative knowledgebase to fingerprint microbial carbon cycling processes".</p>
 	
 	<a name="contact"></a>
     <h2 style="text-align: left;">Contact Us</h2>
