--- a/css/html/definition-CF.html
+++ b/css/html/definition-CF.html
@@ -49,7 +49,6 @@
 <body>
 <p class="h1_df">CCycDB-Definition </p>
 <hr>
-<!-- 左侧索引栏 -->
 <div id="menu_df"><a href="https://ccycdb.github.io/"><strong>HOME</strong></a> <a href="#top" style="color: white;background-color:#3B7197">Carbon Release</a> <a href="#CO"><strong>CO</strong></a> <a href="#CO-1" style="font-size: 14px;padding-left: 15px;">Acetyl-CoA &lt;=&gt; CO</a> <a href="#CO-CO2" style="font-size: 14px;padding-left: 15px;">CO &lt;=&gt; CO2</a> 
   <a href="#CO2"><strong>CO<sub>2</sub></strong></a>
 	<a href="#CBB" style="font-size: 14px;padding-left: 15px;">CBB Cycle</a> 
@@ -64,12 +63,11 @@
 	<a href="#Photosynthesis"><strong>Photosynthesis</strong></a>
 	</div>
 
-<!-- 右侧方框 -->
 <div class="box_df">
  <div >
 	<h3>Note:</h3>
 	<p style="margin-top: 0px; margin-bottom: 2px; margin-left: 40px;"><strong>From left to right:</strong></p>
-	<p style="margin-top: 0px;">Gene name; Annotation; KO Orthology;KO Symbol; Name in KEGG; EC-number in Brenda; Enzyme Classes in CAZY; GO Term </p>
+	<p style="margin-top: 0px;">Gene name; Annotation; KO Orthology (KO Symbol); KO annotation; EC-number in Brenda; Enzyme Classes in CAZY; GO Term </p>
  </div>
 	
 <a name="top"></a>
