--- a/css/html/definition-CR.html
+++ b/css/html/definition-CR.html
@@ -49,7 +49,7 @@ body{
 <body>
 <p class="h1_df">CCycDB-Definition </p>
 <hr>
-<!-- 左侧索引 -->
+
 <div id="menu_df">
 	<a href="https://ccycdb.github.io/" style="text-align: center；"><strong>HOME</strong></a>
 	<a href="#top" style="color: white;background-color:#3B7197">Carbon Release</a>
@@ -67,7 +67,7 @@ body{
  <div >
 	<h3>Note:</h3>
 	<p style="margin-top: 0px; margin-bottom: 2px; margin-left: 40px;"><strong>From left to right:</strong></p>
-	<p style="margin-top: 0px;">Gene name; Annotation; KO Orthology;KO Symbol; Name in KEGG; EC-number in Brenda; Enzyme Classes in CAZY; GO Term </p>
+	<p style="margin-top: 0px;">Gene name; Annotation; KO Orthology (KO Symbol); KO annotation; EC-number in Brenda; Enzyme Classes in CAZY; GO Term </p>
  </div>
 <a name="top"></a>
 <div class="level">
