--- a/css/html/definition-OB.html
+++ b/css/html/definition-OB.html
@@ -109,7 +109,7 @@
  <div >
 	<h3>Note:</h3>
 	<p style="margin-top: 0px; margin-bottom: 2px; margin-left: 40px;"><strong>From left to right:</strong></p>
-	<p style="margin-top: 0px;">Gene name; Annotation; KO Orthology;KO Symbol; Name in KEGG; EC-number in Brenda; Enzyme Classes in CAZY; GO Term </p>
+	<p style="margin-top: 0px;">Gene name; Annotation; KO Orthology (KO Symbol); KO annotation; EC-number in Brenda; Enzyme Classes in CAZY; GO Term </p>
  </div>
 <div class="level">
   <h3>Cateogory</h3>
