--- a/css/html/definition-Trans.html
+++ b/css/html/definition-Trans.html
@@ -49,7 +49,6 @@
 <p class="h1_df">CCycDB-Definition </p>
 <hr>
 
-<!-- 左侧索引 -->
 <div id="menu_df">
 	<a href="https://ccycdb.github.io/"><strong>HOME</strong></a>
 	<a href="#top" style="color: white;background-color:#3B7197">Transport</a>
@@ -60,20 +59,18 @@
 	  
 </div>
 
-<!-- 右侧 -->
 <div class="box_df">
 <!-- 1 -->
  <div >
 	<h3>Note:</h3>
 	<p style="margin-top: 0px; margin-bottom: 2px; margin-left: 40px;"><strong>From left to right:</strong></p>
-	<p style="margin-top: 0px;">Gene name; Annotation; KO Orthology;KO Symbol; Name in KEGG; EC-number in Brenda; Enzyme Classes in CAZY; GO Term </p>
+	<p style="margin-top: 0px;">Gene name; Annotation; KO Orthology (KO Symbol); KO annotation; EC-number in Brenda; Enzyme Classes in CAZY; GO Term </p>
  </div>
 <!---->
 <div class="level">
 	<a name="top"></a>
   <h3>Cateogory</h3>
   <ul class="ul_level">
-  <!--补充内容-->
 	  
 <p class ="level1_df">Transport</p>
 	<a name="ABC"></a>
