--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ li {
     <li><p style="font-size: 18px;margin-left: 0px;text-decoration:underline;"><a href="../css/html/definition-CF.html">Carbon fixation</a></p></li>
     <li><p style="font-size: 18px;margin-left: 0px;text-decoration:underline;"><a href="../css/html/definition-CR.html">Carbon release</a></p></li>
     <li><p style="font-size: 18px;margin-left: 0px;text-decoration:underline;"><a href="../css/html/definition-OB.html">Organic biosynthesis</a></p></li>
-    <li><p style="font-size: 18px;margin-left: 0px;text-decoration:underline;"><a href="#">Organic degradation</a></p></li>
+    <li><p style="font-size: 18px;margin-left: 0px;text-decoration:underline;"><a href="../css/html/definition-OD.html">Organic degradation</a></p></li>
     <li><p style="font-size: 18px;margin-left: 0px;text-decoration:underline;"><a href="../css/html/definition-OT.html">Organic transformation</a></p></li>
     <li><p style="font-size: 18px;margin-left: 0px;text-decoration:underline;"><a href="../css/html/definition-Trans.html">Transporters</a></p></li>
 
