--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ li {
 	
 	<a name="contact"></a>
     <h2 style="text-align: left;">Contact Us</h2>
-    <p style="text-indent:0px;">Email: tuqichao@sdu.edu.cn or zhoujiayin1996@163.com</p>
+    <p style="text-indent:0px;">Email: tuqichao@sdu.edu.cn or jiayinzhou@mail.sdu.edu.cn</p>
 
 </div>
 
