--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ li {
 <!-- ciation -->
 <div class="box2">
     <h2 id="model-configs" style="text-align: left;"><a name="citation"></a>Citation</h2>
-       <p> If you feel this database and utilities are useful, please cite: "CCycDB: an integrative knowledgebase to fingerprint microbial carbon cycling processes".</p>
+       <p> If you feel this database and utilities are useful, please cite: "CCycDB: an integrative knowledgebase to fingerprint microbial carbon cycling processes". (to be submitted)</p>
 	
 	<a name="contact"></a>
     <h2 style="text-align: left;">Contact Us</h2>
