--- a/css/html/definition-CR.html
+++ b/css/html/definition-CR.html
@@ -65,9 +65,10 @@ body{
 
 <div class="box_df">
  <div >
-	<h3>Note:</h3>
+    <h3>Note:</h3>
 	<p style="margin-top: 0px; margin-bottom: 2px; margin-left: 40px;"><strong>From left to right:</strong></p>
-	<p style="margin-top: 0px;">Gene name; Annotation; KO Orthology (KO Symbol); KO annotation; EC-number in Brenda; Enzyme Classes in CAZY; GO Term </p>
+	<p style="margin-top: 0px;"> <span style="color: black;">Gene name;</span> <span style="color: black;">Annotation;</span> <span style="color: #8B4513;">KO Orthology (KO Symbol)：KO annotation</span> <span style="color: #4169E1;">EC-number in Brenda;</span> <span style="color: #B22222;">Enzyme Classes in CAZY;</span> <span style="color: #008000;">GO Term</span></p>
+	<p style="margin-top: 0px;"><strong>Note:</strong> External database links are automatically generated and provided for user reference. </p>
  </div>
 <a name="top"></a>
 <div class="level">
