--- a/css/html/usage.html
+++ b/css/html/usage.html
@@ -92,8 +92,7 @@ li {
 	<!--  数据库下载 -->
 	<div>
 	<h3>Step 1. Download </h3>
-	<p class="optionbox">$ wget -c https://zenodo.org/records/10045943/files/data.tar.gz?download=1 </p>
-	<p> &nbsp;Alternatively, you can download database directly through <strong><a href="https://zenodo.org/records/10045943" style="text-decoration:underline ">https://zenodo.org/records/10045943</a></strong> or third-party download tools.</p>
+	<p class="optionbox">You can download database directly through <strong><a href="https://zenodo.org/records/10045943" style="text-decoration:underline ">https://zenodo.org/records/10045943</a></strong> or third-party download tools.</p>
 	<p class="optionbox">$ git clone https://github.com/ccycdb/CCycDB.PL </p>
 	</div>
 	<!--  UASGE -->
