--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ li {
 <hr>
 
 
-<div id="menuleft"><a href="#"><strong>HOME</strong></a> <a href="#Definition">Definition</a> <a href="../css/html/usage.html">Usage and Examples</a> <a href="https://zenodo.org/record/8324818/">Download</a> <a href="#citation">Citing CCycDB</a> <a href="../css/html/learnmore.html">Learn more</a> <a href="#contact">Contact us</a></div>
+<div id="menuleft"><a href="#"><strong>HOME</strong></a> <a href="#Definition">Definition</a> <a href="../css/html/usage.html">Usage and Examples</a> <a href="https://zenodo.org/records/10045943">Download</a> <a href="#citation">Citing CCycDB</a> <a href="../css/html/learnmore.html">Learn more</a> <a href="#contact">Contact us</a></div>
 
 <h2 style="margin-left: 200px;margin-top: 0px;"> Welcom to the CCycDB ! </h2>
 
